--- a/itbootcamp_final_project/pom.xml
+++ b/itbootcamp_final_project/pom.xml
@@ -34,6 +34,11 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>ru.yandex.qatools.ashot</groupId>
+            <artifactId>ashot</artifactId>
+            <version>1.5.4</version>
+        </dependency>
 
     </dependencies>
 
